@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.16:
 *06/04/18:
+   * Fix system tray resize looping/livelock, sf.net bug #1359442 (Simon)
+     SystemTray.cc
    * Fix iconbar updates (icon and title)
      (Thanks Mark Tiefenbruck, mark at tiefenbruck dot org)
      WinClient.hh/cc Window.hh/cc IconButton.cc IconbarTool.cc WinButton.cc
